cambio en textos navbar

--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
         </div>
         <div class="navbar">
           <div class="options-navbar">
-            <div class="btn-inicio">iNICIO</div>
-            <div class="btn-quienessomos">QuieneS somos?</div>
+            <div class="btn-inicio">INICIO</div>
+            <div class="btn-quienessomos">¿Quienes somos?</div>
             <div class="btn-produtos">Productos</div>
             <div class="btn-ubicanos">Ubicanos</div>
             <div class="btn-contactanos">Contactanos</div>
