Se agrega primera etapa del homepage

--- a/index.html
+++ b/index.html
@@ -351,13 +351,23 @@
           <div class="productos">PRODUCTOS DE ALTA CALIDAD</div>
         </div>
       </div>
+
       <div class="section-banner">
-        <div class="shadow-banner"></div>
-        <img class="img-banner-rh" src="./img/img-banner-rh0.png" />
-        <img class="img-banner-lf" src="./img/img-banner-lf0.png" />
-        <img class="img-banner-center" src="./img/img-banner-center0.png" />
+        <ul>
+          <li>
+            <img class="img-banner-rh" src="./img/img-banner-rh0.png" />
+          </li>
+          <li>
+            <img class="img-banner-lf" src="./img/img-banner-lf0.png" />
+          </li>
+          <li>
+            <img class="img-banner-center" src="./img/img-banner-center0.png" />
+          </li>
+        </ul>
+        <div class="shadow-banner"></div>j
         <img class="img-logo2" src="./img/img-logo1.png" />
       </div>
+      
       <div class="header">
         <div class="header-logo">
           <div class="background-info"></div>
@@ -377,7 +387,7 @@
           <div class="header-info-box">
             <img
               class="sin-t-tulo-1-removebg-preview-1"
-              src="sin-t-tulo-1-removebg-preview-10.png"
+              src="./img/sin-t-tulo-1-removebg-preview-10.png"
             />
             <div class="info-box">
               <div class="info-adress">
