--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         -webkit-font-smoothing: antialiased;
       }
     </style>
-    <title>Document</title>
+    <title>DistriDulces</title>
   </head>
   <body>
     <div class="homepage">
