--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           >
             <path
               d="M0 0H627L603.596 14.8598C584.581 26.9321 570.758 45.6676 564.834 67.3974C558.868 89.2773 544.897 108.116 525.691 120.176L486.938 144.51C470.255 154.986 451.549 161.823 432.043 164.574L352.219 175.834L0 183V0Z"
-              fill="#4478FF"
+              fill="#304c78"
             />
           </svg>
           <div class="header-info-box">
@@ -381,12 +381,12 @@
             />
             <div class="info-box">
               <div class="info-adress">
-                <div class="frame-614">
+                <div class="frame-61">
                   <div class="group-60">
                     <div class="group-82">
                       <div class="ellipse-18"></div>
                       <svg
-                        class="ion-home2"
+                        class="ion-home"
                         width="22"
                         height="22"
                         viewBox="0 0 22 22"
@@ -411,11 +411,11 @@
                 </div>
               </div>
               <div class="info-phone">
-                <div class="frame-615">
-                  <div class="group-592">
+                <div class="frame-612">
+                  <div class="group-59">
                     <div class="ellipse-13"></div>
                     <svg
-                      class="fluent-call-24-filled2"
+                      class="fluent-call-24-filled"
                       width="27"
                       height="27"
                       viewBox="0 0 27 27"
@@ -435,11 +435,11 @@
                 </div>
               </div>
               <div class="info-email">
-                <div class="frame-616">
+                <div class="frame-613">
                   <div class="frame-59">
                     <div class="ellipse-132"></div>
                     <svg
-                      class="clarity-envelope-line2"
+                      class="clarity-envelope-line"
                       width="23"
                       height="19"
                       viewBox="0 0 23 19"
@@ -468,46 +468,35 @@
                     <div class="email-us-here">Email Us Here</div>
                     <div class="example-gmail-com">example@gmail.com</div>
                   </div>
-                  <div class="inicio-sesion">
-                    <div class="iniciar-sesion">Iniciar sesion</div>
-                    <svg
-                      class="rectangle-352"
-                      width="184"
-                      height="46"
-                      viewBox="0 0 184 46"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M22.5 1H161.5C173.65 1 183.5 10.8497 183.5 23C183.5 35.1503 173.65 45 161.5 45H22.5C10.3497 45 0.5 35.1503 0.5 23C0.5 10.8497 10.3497 1 22.5 1Z"
-                        stroke="#001F3F"
-                      />
-                    </svg>
-                    <div class="user">
-                      <svg
-                        class="user2"
-                        width="18"
-                        height="21"
-                        viewBox="0 0 18 21"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M13.5 5C13.5 7.62336 11.3733 9.75 8.75 9.75C6.12668 9.75 4 7.62336 4 5C4 2.37664 6.12668 0.25 8.75 0.25C11.3733 0.25 13.5 2.37664 13.5 5Z"
-                          stroke="#001F3F"
-                          stroke-width="2"
-                        />
-                        <path
-                          d="M18 20.5V18.5C18 15.1863 15.3137 12.5 12 12.5H6C2.68629 12.5 0 15.1863 0 18.5V20.5"
-                          stroke="#001F3F"
-                          stroke-width="2"
-                        />
-                      </svg>
-                    </div>
-                  </div>
                 </div>
               </div>
+              <div class="login">
+                <div class="backgroud-login"></div>
+                <div class="img-person">
+                  <svg
+                    class="user"
+                    width="18"
+                    height="21"
+                    viewBox="0 0 18 21"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M13.5 5.5C13.5 8.12336 11.3733 10.25 8.75 10.25C6.12668 10.25 4 8.12336 4 5.5C4 2.87664 6.12668 0.75 8.75 0.75C11.3733 0.75 13.5 2.87664 13.5 5.5Z"
+                      stroke="#001F3F"
+                      stroke-width="2"
+                    />
+                    <path
+                      d="M18 21V19C18 15.6863 15.3137 13 12 13H6C2.68629 13 0 15.6863 0 19V21"
+                      stroke="#001F3F"
+                      stroke-width="2"
+                    />
+                  </svg>
+                </div>
+                <div class="txt-iniciar-sesion">Iniciar sesion</div>
+              </div>              
             </div>
+            
           </div>
         </div>
         <div class="navbar">
@@ -526,23 +515,12 @@
             </li>
           </ul>
           <div class="backgrount-search">
-            <div class="txt-search">Busqueda</div>
-            <svg
-              class="lbl-search"
-              width="298"
-              height="34"
-              viewBox="0 0 298 34"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M0 15C0 6.71573 6.71573 0 15 0H283C291.284 0 298 6.71573 298 15V19C298 27.2843 291.284 34 283 34H149H15C6.71573 34 0 27.2843 0 19V15Z"
-                fill="white"
-              />
-            </svg>
+            <label for="product-search" class="txt-search">Busqueda</label>
+            <input type="text" id="product-search" name="product-search" class="lbl-search">
           </div>
         </div>
       </div>
     </div>
+  <script src="script.js"></script>
   </body>
 </html>
