ignorar este commit

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       </div>
 
       <div class="section-banner" id="section-banner">
-        <div class="shadow-banner"></div>j
+        <div class="shadow-banner"></div>
         <ul>
           <li>
             <img class="img-banner-rh" src="./img/img-banner-rh0.png" />
