banner hecho pero necesita ajustes

--- a/index.html
+++ b/index.html
@@ -343,19 +343,11 @@
       </div>
 
       <div class="section-banner" id="section-banner">
-        <div class="shadow-banner"></div>
         <ul>
-          <li>
-            <img class="img-banner-rh" src="./img/img-banner-rh0.png" />
-          </li>
-          <li>
-            <img class="img-banner-lf" src="./img/img-banner-lf0.png" />
-          </li>
-          <li>
-            <img class="img-banner-center" src="./img/img-banner-center0.png" />
-          </li>
+          <li><img class="img-banner-center" src="./img/img-banner-center0.png" /></li>
+          <li><img class="img-banner-rh" src="./img/img-banner-rh0.png" /></li>
+          <li><img class="img-banner-lf" src="./img/img-banner-lf0.png" /></li>
         </ul>
-        <img class="img-logo2" src="./img/img-logo1.png" />
       </div>
       
       <div class="header">
