--- a/prueba.html
+++ b/prueba.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./prueba.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="prueba.css">
+    <title>Tu Página con Slider de Productos</title>
 </head>
 <body>
-    <div class="section-banner" id="section-banner">
-        <div class="slide">
-            <ul>
-                <li><img class="img-banner-center" src="./img/img-banner-center0.png" /></li>
-                <li><img class="img-banner-rh" src="./img/img-banner-lf0.png" /></li>
-                <li><img class="img-banner-lf" src="./img/img-banner-rh0.png" /></li>
-            </ul>
+    <div class="gallery">
+        <div class="content">
+            <img src="./img/img-card1.png" alt="">
+            <div class="tittle-card">BARRILETE</div>
+            <div class="price">$5.99/lbs</div>
+            <button class="btn-comprar">Comprar</button>
         </div>
-      </div>
+        <div class="content">
+            <img src="./img/img-card1.png" alt="">
+            <div class="tittle-card">BARRILETE</div>
+            <div class="price">$5.99/lbs</div>
+            <button class="btn-comprar">Comprar</button>
+        </div>
+        <div class="content">
+            <img src="./img/img-card1.png" alt="">
+            <div class="tittle-card">BARRILETE</div>
+            <div class="price">$5.99/lbs</div>
+            <button class="btn-comprar">Comprar</button>
+        </div>
+        <div class="content">
+            <img src="./img/img-card1.png" alt="">
+            <div class="tittle-card">BARRILETE</div>
+            <div class="price">$5.99/lbs</div>
+            <button class="btn-comprar">Comprar</button>
+        </div>
+    </div>
 </body>
-</html> 
+</html>
+
