--- a/prueba.html
+++ b/prueba.html
@@ -173,7 +173,7 @@
 
 
 
-    <div class="navbar">
+    <nav class="navbar">
         <ul class="options-navbar">
             <li>
                 <a href="#section-banner">Inicio</a>
@@ -192,55 +192,276 @@
             <label for="product-search" class="txt-search">Busqueda</label>
             <input type="text" id="product-search" name="product-search" class="lbl-search">
         </div>
-    </div>
+    </nav>
 
 
-
-    <div class="section-banner" id="section-banner">
-        <div class="slide">
-            <ul>
-                <li><img class="img-banner-center" src="./img/img-banner-center0.png" /></li>
-                <li><img class="img-banner-rh" src="./img/img-banner-rh0.png" /></li>
-                <li><img class="img-banner-lf" src="./img/img-banner-lf0.png" /></li>
-            </ul>
-        </div>
-    </div>
+    <main>
+        <section class="section-banner" id="section-banner">
+            <div class="slide">
+                <ul>
+                    <li><img class="img-banner-center" src="./img/img-banner-center0.png" /></li>
+                    <li><img class="img-banner-rh" src="./img/img-banner-rh0.png" /></li>
+                    <li><img class="img-banner-lf" src="./img/img-banner-lf0.png" /></li>
+                </ul>
+            </div>
+        </section>
 
     
-    
-
-
-    <div class="productos-section" id="section-products">
-        <div class="productos">PRODUCTOS DE ALTA CALIDAD</div>
-            <div class="gallery">
-                <div class="content">
-                    <img src="./img/img-card1.png" alt="">
-                    <div class="tittle-card">BARRILETE</div>
-                    <div class="price">$5.99/lbs</div>
-                    <button class="btn-comprar">Comprar</button>
-                </div>
-                <div class="content">
-                    <img src="./img/img-card1.png" alt="">
-                    <div class="tittle-card">BARRILETE</div>
-                    <div class="price">$5.99/lbs</div>
-                    <button class="btn-comprar">Comprar</button>
-                </div>
-                <div class="content">
-                    <img src="./img/img-card1.png" alt="">
-                    <div class="tittle-card">BARRILETE</div>
-                    <div class="price">$5.99/lbs</div>
-                    <button class="btn-comprar">Comprar</button>
-                </div>
+        <section class="productos-section" id="section-products">
+            <div class="productos">PRODUCTOS DE ALTA CALIDAD</div>
+                <div class="gallery">
                     <div class="content">
-                    <img src="./img/img-card1.png" alt="">
-                    <div class="tittle-card">BARRILETE</div>
-                    <div class="price">$5.99/lbs</div>
-                    <button class="btn-comprar">Comprar</button>
+                        <img src="./img/img-card1.png" alt="">
+                        <div class="tittle-card">BARRILETE</div>
+                        <div class="price">$5.99/lbs</div>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+                    <div class="content">
+                        <img src="./img/img-card1.png" alt="">
+                        <div class="tittle-card">BARRILETE</div>
+                        <div class="price">$5.99/lbs</div>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+                    <div class="content">
+                        <img src="./img/img-card1.png" alt="">
+                        <div class="tittle-card">BARRILETE</div>
+                        <div class="price">$5.99/lbs</div>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+                        <div class="content">
+                        <img src="./img/img-card1.png" alt="">
+                        <div class="tittle-card">BARRILETE</div>
+                        <div class="price">$5.99/lbs</div>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+                </div>  
+                <button class="btn-mas-productos">Ver más productos</button>
+            </div>
+        </section>
+
+
+
+        <section class="section-aboutus" >
+            <h2 class="txt-title-auboutus">SOBRE NOSOTROS</h2>
+            <p class="txt-aboutus">
+                ¡Bienvenidos a DISTRIDULCES!
+                <br />
+                En DISTRIDULCES, nos enorgullece ser una distribuidora de abarrotes
+                comprometida con la excelencia y la satisfacción del cliente. Fundada
+                con la visión de facilitar el acceso a productos de calidad para
+                todos, hemos construido una sólida reputación en la industria de
+                distribución de alimentos.
+                <br />
+            </p>
+        </section>
+
+
+        <section class="section-history">
+            <div class="background2"></div>
+            <div class="txt-history">
+            Desde nuestros humildes comienzos, hemos crecido y evolucionado para
+            convertirnos en una fuente confiable de abarrotes para comercios,
+            restaurantes y hogares. Nuestra historia está marcada por la pasión
+            por ofrecer productos frescos, variados y asequibles a nuestra
+            comunidad.
+            <br />
+            Valors Fundamentales
+            </div>
+            <div class="txt-title3">NUESTRA HISTORIA</div>
+            <img class="img-history" src="./img/img-history0.png" />
+            <svg
+            class="polygon-1"
+            width="902"
+            height="655"
+            viewBox="0 0 902 655"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            >
+            <path
+                d="M900.526 654H397.592C425.125 650.697 451.203 639.298 472.424 621.063L496.929 600.006C519.259 580.818 547.087 569.188 576.429 566.778L603.062 564.591C654.005 560.408 695.497 521.962 703.543 471.485L712.338 416.309C718.733 376.191 760.284 351.998 798.33 366.24C840.607 382.065 885.798 351.221 886.467 306.084L890.525 32.3534L900.526 654Z"
+                fill="#F3F3F3"
+                stroke="#F3F3F3"
+            />
+            </svg>
+            <img class="img-logo-history" src="./img/img-logo-history0.png" />
+        </section>
+
+
+
+        <section class="section-values">
+            <div class="background"></div>
+            <img class="img-values" src="./img/img-values0.png" />
+            <div class="txt-values">
+            Compromiso con la Calidad: Seleccionamos cuidadosamente cada producto
+            para garantizar la frescura y calidad que nuestros clientes merecen.
+            <br />
+            Servicio al Cliente Excepcional: Nuestro equipo dedicado está aquí
+            para atender todas sus necesidades. Nos esforzamos por superar sus
+            expectativas en cada interacción.
+            <br />
+            Sostenibilidad: Nos comprometemos a operar de manera sostenible,
+            minimizando nuestro impacto ambiental y apoyando prácticas agrícolas
+            responsables.
+            </div>
+            <div class="txt-title2">NUESTROS VALORES</div>
+        </section>
+
+
+
+        <section class="section-info-contact">
+            <div class="adress">
+              <div class="frame-61">
+                <div class="group-59">
+                  <div class="group-82">
+                    <div class="ellipse-18"></div>
+                    <svg
+                      class="ion-home"
+                      width="22"
+                      height="22"
+                      viewBox="0 0 22 22"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <g clip-path="url(#clip0_671_19)">
+                        <path
+                          d="M11.0349 4.25019C10.9738 4.19178 10.8926 4.15918 10.8081 4.15918C10.7236 4.15918 10.6423 4.19178 10.5813 4.25019L3.03064 11.4633C2.99857 11.494 2.97306 11.5308 2.95564 11.5717C2.93823 11.6125 2.92928 11.6564 2.92933 11.7008L2.9281 18.4705C2.9281 18.8186 3.06638 19.1524 3.31251 19.3986C3.55864 19.6447 3.89246 19.783 4.24054 19.783H8.18198C8.35602 19.783 8.52293 19.7138 8.64599 19.5908C8.76906 19.4677 8.8382 19.3008 8.8382 19.1267V13.5489C8.8382 13.4618 8.87277 13.3784 8.9343 13.3168C8.99583 13.2553 9.07929 13.2207 9.16631 13.2207H12.4474C12.5344 13.2207 12.6179 13.2553 12.6794 13.3168C12.741 13.3784 12.7755 13.4618 12.7755 13.5489V19.1267C12.7755 19.3008 12.8447 19.4677 12.9677 19.5908C13.0908 19.7138 13.2577 19.783 13.4317 19.783H17.3715C17.7196 19.783 18.0534 19.6447 18.2996 19.3986C18.5457 19.1524 18.684 18.8186 18.684 18.4705V11.7008C18.684 11.6564 18.6751 11.6125 18.6577 11.5717C18.6403 11.5308 18.6147 11.494 18.5827 11.4633L11.0349 4.25019Z"
+                          fill="#001F3F"
+                        />
+                        <path
+                          d="M20.4414 10.1103L17.3736 7.17532V2.72162C17.3736 2.54758 17.3044 2.38067 17.1814 2.2576C17.0583 2.13454 16.8914 2.0654 16.7173 2.0654H14.7487C14.5746 2.0654 14.4077 2.13454 14.2847 2.2576C14.1616 2.38067 14.0925 2.54758 14.0925 2.72162V4.03407L11.7169 1.76272C11.4946 1.53796 11.1641 1.40918 10.8068 1.40918C10.4508 1.40918 10.1211 1.53796 9.8988 1.76313L1.17515 10.1094C0.920042 10.3555 0.888051 10.7603 1.12019 11.0269C1.17848 11.0942 1.24986 11.1489 1.32997 11.1878C1.41009 11.2266 1.49727 11.2487 1.58621 11.2528C1.67514 11.2569 1.76398 11.2428 1.8473 11.2114C1.93063 11.1801 2.0067 11.1321 2.07089 11.0704L10.5813 2.93818C10.6423 2.87976 10.7236 2.84716 10.8081 2.84716C10.8926 2.84716 10.9738 2.87976 11.0349 2.93818L19.5461 11.0704C19.6714 11.1906 19.8394 11.2563 20.0131 11.2529C20.1867 11.2495 20.352 11.1774 20.4726 11.0524C20.7244 10.7915 20.7035 10.3609 20.4414 10.1103Z"
+                          fill="#001F3F"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_671_19">
+                          <rect
+                            width="20.9991"
+                            height="20.9991"
+                            fill="white"
+                            transform="translate(0.307251 0.0966797)"
+                          />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
                 </div>
-            </div>  
-            <button class="btn-mas-productos">Ver más productos</button>
-           </div>
-    </div>
+                <div class="frame-60">
+                  <div class="address">Address</div>
+                  <div class="_123-new-york-usa">123, New York, USA</div>
+                </div>
+              </div>
+            </div>
+            <div class="phone">
+              <div class="frame-612">
+                <div class="group-592">
+                  <div class="ellipse-13"></div>
+                  <svg
+                    class="fluent-call-24-filled"
+                    width="28"
+                    height="27"
+                    viewBox="0 0 28 27"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M9.54935 2.74366L10.761 2.35666C11.895 1.99441 13.1077 2.58054 13.5937 3.72579L14.5612 6.00729C14.9831 7.00066 14.7491 8.16954 13.983 8.89629L11.8533 10.919C11.985 12.1295 12.3911 13.3209 13.0728 14.4932C13.7207 15.6274 14.5894 16.6201 15.6277 17.4125L18.1882 16.5575C19.158 16.2347 20.2143 16.607 20.8095 17.4812L22.1955 19.5174C22.8885 20.5344 22.7636 21.9362 21.9052 22.7979L20.985 23.7215C20.0692 24.6407 18.762 24.9748 17.5515 24.5968C14.6951 23.7058 12.0693 21.0609 9.6731 16.6622C7.27347 12.2567 6.42747 8.51716 7.13285 5.44816C7.42985 4.15666 8.3501 3.12729 9.5516 2.74366H9.54935Z"
+                      fill="#001F3F"
+                    />
+                  </svg>
+                </div>
+                <div class="frame-60">
+                  <div class="phone-number">Phone Number</div>
+                  <div class="_650-123-1212">(650) 123-1212</div>
+                </div>
+              </div>
+            </div>
+            <div class="email">
+              <div class="frame-613">
+                <div class="frame-59">
+                  <div class="ellipse-132"></div>
+                  <svg
+                    class="clarity-envelope-line"
+                    width="24"
+                    height="19"
+                    viewBox="0 0 24 19"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <g clip-path="url(#clip0_671_38)">
+                      <path
+                        d="M21.2504 1.33301H3.36152C3.02263 1.33301 2.69762 1.46763 2.45799 1.70726C2.21836 1.94689 2.08374 2.2719 2.08374 2.61079V15.3886C2.08374 15.7275 2.21836 16.0525 2.45799 16.2921C2.69762 16.5317 3.02263 16.6663 3.36152 16.6663H21.2504C21.5893 16.6663 21.9143 16.5317 22.1539 16.2921C22.3936 16.0525 22.5282 15.7275 22.5282 15.3886V2.61079C22.5282 2.2719 22.3936 1.94689 22.1539 1.70726C21.9143 1.46763 21.5893 1.33301 21.2504 1.33301ZM20.2665 15.3886H4.42207L8.8943 10.763L7.9743 9.87495L3.36152 14.6475V3.5819L11.3029 11.485C11.5423 11.7229 11.8662 11.8565 12.2037 11.8565C12.5413 11.8565 12.8652 11.7229 13.1046 11.485L21.2504 3.38384V14.5644L16.5482 9.86217L15.6474 10.763L20.2665 15.3886ZM4.19846 2.61079H20.2154L12.2037 10.5777L4.19846 2.61079Z"
+                        fill="#001F3F"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_671_38">
+                        <rect
+                          width="23"
+                          height="18"
+                          fill="white"
+                          transform="translate(0.805908 0.5)"
+                        />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <div class="frame-60">
+                  <div class="email-us-here">Email Us Here</div>
+                  <div class="example-gmail-com">example@gmail.com</div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="section-contact-input">
+                <div class="lbl-mensaje"></div>
+                <div class="txt-mensaje">MENSAJE</div>
+  
+                <div class="lbl-correo"></div>
+                <div class="txt-correo">CORREO</div>
+  
+                <label for="name" class="txt-nombre">NOMBRE</label> 
+                <div class="lbl-nombre">
+                    <input type="text" id="name" name="name" placeholder="Introduce tu nombre">
+                </div> 
+            </div>
+            <button class="btn-enviar">Enviar</button>
+            <div class="txt-container">
+                <div class="txt-title-contactanos">CONTACTANOS</div>
+                    <div class="txt-contactus">
+                        No dude en comunicarse con nosotros mediante el formulario de
+                        contacto a continuación. Estamos aquí para responder cualquier
+                        pregunta que pueda tener y brindarle el mejor servicio posible.
+                    </div>
+                </div>
+            </div>   
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="frame-86">
+            <svg
+                class="rectangle-33"
+                width="1739"
+                height="345"
+                viewBox="0 0 1739 345"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+            >
+                <path d="M0 0H1739V345H0V0Z" fill="#808080" />
+            </svg>
+            <img class="img-instagram" src="./img/img-instagram0.png" />
+            <img class="img-facebook" src="./img/img-facebook0.png" />
+            <img class="img-whatapp" src="./img/img-whatapp0.png" />
+            <div class="txt-copy">© 2024 - DISTRIDUCES.</div>
+            <div class="txt-footer">Politicas</div>
+            <div class="txt-footer2">Terminos y condiciones</div>
+            <div class="txt-footer3">Contactanos</div>
+            <div class="txt-footer4">Ubicanos</div>
+            <div class="txt-footer5">Productos</div>
+            <div class="txt-footer6">Quienes somos</div>
+            <img class="img-logo" src="./img/img-logo0.png" />
+        </div>
+    </footer>
 
 
 </body>
