se integra la pagina de productos

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <a href="#section-banner">Inicio</a>
       </li>
       <li>
-        <a href="./product-page/prodctpage.html">Productos</a>
+        <a href="./product-page/ProductPage.html">Productos</a>
       </li>
       <li>
         <a href="#section-aboutus">¿Quienes somos?</a>
       </li>
       <li>
-        <a href="#section-info-contact">Contactanos</a>
+        <a href="#contacto">Contactanos</a>
       </li>
     </ul>
     <div class="backgrount-search">
@@ -236,8 +236,6 @@
     
     
   </section>
-
-  
 
 
   <!-- Footer -->
