--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
               </div>
             </div>
           </div>
-          <button class="login" id="login">
-            <div class="login2"></div>
+          <a class="login" id="login">
             <div class="txt-iniciar-sesion">Iniciar sesion</div>
             <div class="para-administradores">Para Administradores</div>
             <img class="user-img" src="./img/user.png" />
-          </button>
+          </a>
         </div>
       </div>
     </div>
@@ -85,7 +84,7 @@
   <nav class="navbar">
     <ul class="options-navbar">
       <li>
-        <a href="#section-banner">Inicio</a>
+        <a href="./index.html#section-banner">INICIO</a>
       </li>
       <li>
         <a href="./product-page/ProductPage.html">Productos</a>
@@ -161,13 +160,16 @@
         logrando así nuestra consolidación en el futuro.
       </p>
     </div>
-    <img class="img" src="./img/img0.png" />
-
+    
+    <img class="imgMision" src="./img/img0.png" />
   </section>
+
+  
 
   <!-- Sección vision -->
   <section class="vision">
 
+    <img class="img-vision" src="./img/img-vision.png" />
     <div class="txt-content-vision">
       <h2 class="txt-title-vision">VISION</h2>
       <p>
@@ -177,7 +179,6 @@
         consolidarnos como lideres en ventas y distribución.
       </p>
     </div>
-    <img class="img-vision" src="./img/img-vision.png" />
 
   </section>
 
