--- a/product-page/ProductPage.html
+++ b/product-page/ProductPage.html
@@ -36,6 +36,7 @@
 <body>
   <div class="product-page">
 
+    <!-- Footer -->
     <section class="footer">
       <svg class="background-footer" width="1443" height="345" viewBox="0 0 1443 345" fill="none"
         xmlns="http://www.w3.org/2000/svg">
@@ -57,21 +58,27 @@
       <img class="img-logo" src="img-logo0.png" />
     </section>
 
+    <!-- Contenido del header -->
     <section class="header">
+
+      <!-- logo y info contactos -->
       <div class="header-logo">
-        <div class="background-info"></div>
+
+        <!-- Logo -->
         <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
             d="M0 0H474L456.883 11.3123C442.125 21.0648 431.486 35.9202 427.004 53.0315V53.0315C422.49 70.2642 411.733 85.2044 396.821 94.9507L374.768 109.365C357.782 120.467 338.587 127.744 318.51 130.691L266.271 138.361L0 144V0Z"
             fill="#304C78" />
         </svg>
+
+        <!--  Informacion -->
         <div class="header-info-box">
-          <img class="sin-t-tulo-1-removebg-preview-1" src="sin-t-tulo-1-removebg-preview-10.png" />
+          <img class="sin-t-tulo-1-removebg-preview-1" src="/img/logo.png" />
           <div class="info-box">
             <div class="info-adress">
               <div class="frame-61">
-                <img class="address-icon" src="address-icon0.png" />
+                <img class="address-icon" src="/img/address-icon0.png" />
                 <div class="frame-60">
                   <div class="address">Address</div>
                   <div class="_123-new-york-usa">123, New York, USA</div>
@@ -80,7 +87,7 @@
             </div>
             <div class="info-phone">
               <div class="frame-612">
-                <img class="phone-icon" src="phone-icon0.png" />
+                <img class="phone-icon" src="/img/phone-icon0.png" />
                 <div class="frame-60">
                   <div class="phone-number">Phone Number</div>
                   <div class="_650-123-1212">(650) 123-1212</div>
@@ -89,7 +96,7 @@
             </div>
             <div class="info-email">
               <div class="frame-613">
-                <img class="email-icon" src="email-icon0.png" />
+                <img class="email-icon" src="img/email-icon0.png" />
                 <div class="frame-60">
                   <div class="email-us-here">Email Us Here</div>
                   <div class="example-gmail-com">example@gmail.com</div>
@@ -97,12 +104,9 @@
               </div>
             </div>
             <button class="login" id="login">
-
-              <div class="login2">
-              </div>
               <div class="txt-iniciar-sesion">Iniciar sesion</div>
               <div class="para-administradores">Para Administradores</div>
-              <img class="user-img" src="./user-img0.png" />
+              <img class="user-img" src="img/user-img0.png" />
             </button>
           </div>
         </div>
@@ -127,10 +131,11 @@
         </div>
       </dialog>
 
+      <!-- Navbar -->
       <nav class="navbar">
         <ul class="options-navbar">
           <li>
-            <a class="inicio" href="./index.html">INICIO</a>
+            <a class="inicio" href="/index.html">INICIO</a>
           </li>
           <li>
             <a href="./ProductPage.html">Productos</a>
@@ -146,12 +151,12 @@
 
           <label for="product-search" class="txt-search">Busqueda</label>
           <input type="text" id="product-search" name="product-search" class="lbl-search">
-          
+
         </div>
       </nav>
 
     </section>
-
+    <!-- Cuerpo -->
     <div class="product-cards">
       <div class="group-cards-2">
         <div class="card-homepage">
