Header final movil

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu Sitio Web</title>
+  <title>Distridulces</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,8 +12,7 @@
 
   <!-- Header -->
   <header>
-    <div class="header-logo">
-      <div class="background-info"></div>
+    <div class="header-desktop">
       <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
         xmlns="http://www.w3.org/2000/svg">
         <path
@@ -58,6 +57,59 @@
         </div>
       </div>
     </div>
+
+    <div class="header-mobile">
+        <img class="logo-mobile" src="./img/img-logo-mobile.png" />
+        <input type="checkbox"  id="check">
+        <label for="check" class="mostrar-menu">
+            &#8801
+        </label>
+
+        <nav class="navbar-mobile">
+            <img class="logo-mobile-navbar" src="./img/img-logo-mobile.png" />
+            <a href="#">Inicio</a>
+            <a href="#">¿Quienes Somos?</a>
+            <a href="#">Productos</a>
+            <a href="#">Ubicanos</a>
+            <a href="#">Contactanos</a>
+            <label for="check" class="esconder-menu">
+                &#215
+            </label>
+
+            <button type="submit">Iniciar sesion</button>
+
+            <div class="info-box-mobile">
+                <div class="info-adress">
+                  <div class="frame-61">
+                    <img class="address-icon" src="./img/address-icon0.png" />
+                    <div class="frame-60">
+                      <div class="address">Address</div>
+                      <div class="_123-new-york-usa">123, New York, USA</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-phone">
+                  <div class="frame-612">
+                    <img class="phone-icon" src="./img/phone-icon0.png" />
+                    <div class="frame-60">
+                      <div class="phone-number">Phone Number</div>
+                      <div class="_650-123-1212">(650) 123-1212</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-email">
+                  <div class="frame-613">
+                    <img class="email-icon" src="./img/email-icon0.png" />
+                    <div class="frame-60">
+                      <div class="email-us-here">Email Us Here</div>
+                      <div class="example-gmail-com">example@gmail.com</div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+
 
   </header>
 
