--- a/distridulces prueba/public/pages/header.html
+++ b/distridulces prueba/public/pages/header.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/header.css">
 </head>
+
 <body>
+
+    <!-- Header -->
     <header>
-        <div class="header-logo">
-            <div class="background-info"></div>
+        <div class="header-desktop">
             <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -17,11 +20,11 @@
                     fill="#304C78" />
             </svg>
             <div class="header-info-box">
-                <img class="sin-t-tulo-1-removebg-preview-1" src="../img/logo.png" />
+                <img class="sin-t-tulo-1-removebg-preview-1" src="./img/logo.png" />
                 <div class="info-box">
                     <div class="info-adress">
                         <div class="frame-61">
-                            <img class="address-icon" src="../img/address-icon0.png" />
+                            <img class="address-icon" src="./img/address-icon0.png" />
                             <div class="frame-60">
                                 <div class="address">Address</div>
                                 <div class="_123-new-york-usa">123, New York, USA</div>
@@ -30,7 +33,7 @@
                     </div>
                     <div class="info-phone">
                         <div class="frame-612">
-                            <img class="phone-icon" src="../img/phone-icon0.png" />
+                            <img class="phone-icon" src="./img/phone-icon0.png" />
                             <div class="frame-60">
                                 <div class="phone-number">Phone Number</div>
                                 <div class="_650-123-1212">(650) 123-1212</div>
@@ -39,7 +42,7 @@
                     </div>
                     <div class="info-email">
                         <div class="frame-613">
-                            <img class="email-icon" src="../img/email-icon0.png" />
+                            <img class="email-icon" src="./img/email-icon0.png" />
                             <div class="frame-60">
                                 <div class="email-us-here">Email Us Here</div>
                                 <div class="example-gmail-com">example@gmail.com</div>
@@ -49,11 +52,87 @@
                     <a class="login" id="login">
                         <div class="txt-iniciar-sesion">Iniciar sesion</div>
                         <div class="para-administradores">Para Administradores</div>
-                        <img class="user-img" src="../img/user.png" />
+                        <img class="user-img" src="./img/user.png" />
                     </a>
                 </div>
             </div>
+
+            <!-- Navbar -->
+            <nav class="navbar">
+                <ul class="options-navbar">
+                    <li>
+                        <a href="./index.html#section-banner">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="./product-page/ProductPage.html">Productos</a>
+                    </li>
+                    <li>
+                        <a href="#section-aboutus">¿Quienes somos?</a>
+                    </li>
+                    <li>
+                        <a href="#contacto">Contactanos</a>
+                    </li>
+                </ul>
+                <div class="backgrount-search">
+                    <label for="product-search" class="txt-search">Busqueda</label>
+                    <input type="text" id="product-search" name="product-search" class="lbl-search">
+                </div>
+            </nav>
+        </div>
+
+        <div class="header-mobile">
+            <img class="logo-mobile" src="./img/img-logo-mobile.png" />
+            <input type="checkbox" id="check">
+            <label for="check" class="mostrar-menu">
+                &#8801
+            </label>
+
+            <nav class="navbar-mobile">
+                <img class="logo-mobile-navbar" src="./img/img-logo-mobile.png" />
+                <a href="#">Inicio</a>
+                <a href="#">¿Quienes Somos?</a>
+                <a href="#">Productos</a>
+                <a href="#">Ubicanos</a>
+                <a href="#">Contactanos</a>
+                <label for="check" class="esconder-menu">
+                    &#215
+                </label>
+
+                <button class="login" id="login">Iniciar sesion</button>
+
+                <div class="info-box-mobile">
+                    <div class="info-adress">
+                        <div class="frame-61">
+                            <img class="address-icon" src="./img/address-icon0.png" />
+                            <div class="frame-60">
+                                <div class="address">Address</div>
+                                <div class="_123-new-york-usa">123, New York, USA</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info-phone">
+                        <div class="frame-612">
+                            <img class="phone-icon" src="./img/phone-icon0.png" />
+                            <div class="frame-60">
+                                <div class="phone-number">Phone Number</div>
+                                <div class="_650-123-1212">(650) 123-1212</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info-email">
+                        <div class="frame-613">
+                            <img class="email-icon" src="./img/email-icon0.png" />
+                            <div class="frame-60">
+                                <div class="email-us-here">Email Us Here</div>
+                                <div class="example-gmail-com">example@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
+
     <!-- ventana emergete de inicio de sesion -->
     <div id="modal" class="modal">
         <div class="modal-contenido">
@@ -71,8 +150,10 @@
             </form>
         </div>
     </div>
-</div>
+
+
 
     <script src="../js/header.js"></script>
 </body>
+
 </html>
