--- a/distridulces prueba/public/pages/home.html
+++ b/distridulces prueba/public/pages/home.html
@@ -25,67 +25,58 @@
   <section class="productos-section" id="productos">
     <h2 class="title-productos">PRODUCTOS DE ALTA CALIDAD</h2>
 
-    <div class="fila">
-      <div class="item" onclick="cargar(this)">
-        <div class="contenedor-foto">
-          <img src="img/img-card1.png" alt="">
+    <div class="slider-mobile">
+      <div class="fila">
+        <div class="item" onclick="cargar(this)">
+          <div class="contenedor-foto">
+            <img src="img/img-card1.png" alt="">
+          </div>
+          <div class="contenedor-texto">
+            <p class="descripcion">Barrilete</p>
+            <span class="precio">$ 5.300</span>
+          </div>
+          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
         </div>
-        <div class="contenedor-texto">
-          <p class="descripcion">Barrilete</p>
-          <span class="precio">$ 5.300</span>
+        <div class="item" onclick="cargar(this)">
+          <div class="contenedor-foto">
+            <img src="img/img-card1.png" alt="">
+          </div>
+          <div class="contenedor-texto">
+            <p class="descripcion">Barrilete</p>
+            <span class="precio">$ 5.300</span>
+          </div>
+          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
         </div>
-        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-      </div>
-      <div class="item" onclick="cargar(this)">
-        <div class="contenedor-foto">
-          <img src="img/img-card1.png" alt="">
+        <div class="item" onclick="cargar(this)">
+          <div class="contenedor-foto">
+            <img src="img/img-card1.png" alt="">
+          </div>
+          <div class="contenedor-texto">
+            <p class="descripcion">Barrilete</p>
+            <span class="precio">$ 5.300</span>
+          </div>
+          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
         </div>
-        <div class="contenedor-texto">
-          <p class="descripcion">Barrilete</p>
-          <span class="precio">$ 5.300</span>
+        <div class="item" onclick="cargar(this)">
+          <div class="contenedor-foto">
+            <img src="img/img-card1.png" alt="">
+          </div>
+          <div class="contenedor-texto">
+            <p class="descripcion">Barrilete</p>
+            <span class="precio">$ 5.300</span>
+          </div>
+          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
         </div>
-        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-      </div>
-      <div class="item" onclick="cargar(this)">
-        <div class="contenedor-foto">
-          <img src="img/img-card1.png" alt="">
+        <div class="item" onclick="cargar(this)">
+          <div class="contenedor-foto">
+            <img src="img/img-card1.png" alt="">
+          </div>
+          <div class="contenedor-texto">
+            <p class="descripcion">Barrilete</p>
+            <span class="precio">$ 5.300</span>
+          </div>
+          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
         </div>
-        <div class="contenedor-texto">
-          <p class="descripcion">Barrilete</p>
-          <span class="precio">$ 5.300</span>
-        </div>
-        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-      </div>
-      <div class="item" onclick="cargar(this)">
-        <div class="contenedor-foto">
-          <img src="img/img-card1.png" alt="">
-        </div>
-        <div class="contenedor-texto">
-          <p class="descripcion">Barrilete</p>
-          <span class="precio">$ 5.300</span>
-        </div>
-        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-      </div>
-      <div class="item" onclick="cargar(this)">
-        <div class="contenedor-foto">
-          <img src="img/img-card1.png" alt="">
-        </div>
-        <div class="contenedor-texto">
-          <p class="descripcion">Barrilete</p>
-          <span class="precio">$ 5.300</span>
-        </div>
-        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-      </div>
-      <div class="item" onclick="cargar(this)">
-        <div class="contenedor-foto">
-          <img src="img/img-card1.png" alt="">
-        </div>
-        <div class="contenedor-texto">
-          <p class="descripcion">Barrilete</p>
-          <span class="precio">$ 5.300</span>
-        </div>
-        <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-      </div>
     </div>
 
     <a href="product-page/ProductPage.html" class="btn-mas-productos">Ver más productos</a>
